--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -924,7 +924,7 @@
                                 <option value="May">May</option>
                                 <option value="June">June</option>
                                 <option value="July">July</option>
-                                <option value="Auguest">Auguest</option>
+                                <option value="August">August</option>
                                 <option value="September">September</option>
                                 <option value="October">October</option>
                                 <option value="November">November</option>
@@ -1310,7 +1310,7 @@
                                         class="card-body profile-card pt-4 d-flex flex-column align-items-center"
                                     >
                                         <img
-                                            th:src="${images/avatars/pm_avatar.png}"
+                                            src="/images/avatars/pm_avatar.svg"
                                             alt="Profile"
                                             class="rounded-circle"
                                         />
