--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -107,12 +107,9 @@
                 >
                     <div class="board">
                         <!-- add task form start -->
-                        <!-- TODO :: REDESIGN ADD TASK FORM -->
                         <!-- add task form end -->
 
                         <div class="lanes" id="sort-container">
-                            <!-- TODO :: SHOW TASK'S DETAILS WHEN CLICK ON TASK -->
-                            <!-- todo start -->
                             <div class="lane">
                                 <h3
                                         class="heading bg-primary text-white rounded-top p-2 d-flex justify-content-between align-items-center"
@@ -430,6 +427,7 @@
                                     type="text"
                                     name="member-tags"
                                     id="member"
+                                    placeholder="Select An Employee"
                             />
                         </div>
                         <div class="col-lg-6">
@@ -476,7 +474,6 @@
                                     name="end_time"
                             />
                         </div>
-
 
 
                         <div class="text-center mt-3">
@@ -570,68 +567,14 @@
     <!--    for assign member-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.2.0/tagify.min.js"></script>
 
-    <script>
+    <script type="module">
+        import {getData, sendData} from "/js/api-function.js";
+        import {getTaskList} from '/js/callDataForTask.js';
 
-        var inputElm = document.querySelectorAll("input[name=member-tags]");
+        // Get the project ID from the hidden element
+        const projectId = document.getElementById("projectId").innerText;
 
-        function tagTemplate(tagData) {
-            return `
-        <tag title="${tagData.email}"
-                contenteditable='false'
-                spellcheck='false'
-                tabIndex="-1"
-                class="tagify__tag ${tagData.class ? tagData.class : ""}"
-                ${this.getAttributes(tagData)}>
-            <x title='' class='tagify__tag__removeBtn' role='button' aria-label='remove tag'></x>
-            <div>
-                <div class='tagify__tag__avatar-wrap'>
-                    <img onerror="this.style.visibility='hidden'" src="${
-                tagData.avatar
-            }">
-                </div>
-                <span class='tagify__tag-text'>${tagData.name}</span>
-            </div>
-        </tag>
-    `;
-        }
-
-        function suggestionItemTemplate(tagData) {
-            return `
-        <div ${this.getAttributes(tagData)}
-            class='tagify__dropdown__item ${tagData.class ? tagData.class : ""}'
-            tabindex="0"
-            role="option">
-            ${
-                tagData.avatar
-                    ? `
-            <div class='tagify__dropdown__item__avatar-wrap'>
-                <img onerror="this.style.visibility='hidden'" src="${tagData.avatar}">
-            </div>`
-                    : ""
-            }
-            <strong>${tagData.name}</strong>
-            <span>${tagData.email}</span>
-        </div>
-    `;
-        }
-
-        function dropdownHeaderTemplate(suggestions) {
-            return `
-        <div class="${this.settings.classNames.dropdownItem} ${
-                this.settings.classNames.dropdownItem
-            }__addAll">
-            <strong>${
-                this.value.length
-                    ? `Add remaning ${suggestions.length}`
-                    : "Add All"
-            }</strong>
-            <span>${suggestions.length} members</span>
-        </div>
-    `;
-        }
-
-        const projectId = document.getElementById("projectId").textContent;
-
+        // Function to fetch the members' list from the backend API
         var membersList;
         $.ajax({
             url: "/api/user/list/projectId/" + projectId,
@@ -643,85 +586,31 @@
         });
         console.log("MEMBERS LIST" , membersList);
 
+        var memberInputTag = document.querySelector('input[name=member-tags]'),
+            tagify = new Tagify(memberInputTag, {
+                enforceWhitelist: true,
+                mode : "select",
+                whitelist:  membersList.map((member) => {
+                    return member.name + " | " + member.role;
+                }),
+                blacklist: ['foo', 'bar'],
+            })
 
-        for (let i = 0; i < inputElm.length; i++) {
-            let a = inputElm[i]
-            // initialize Tagify on the above input node reference
-            var tagify = new Tagify(a, {
-                tagTextProp: "name", // very important since a custom template is used with this property as text
-                // enforceWhitelist: true,
-                skipInvalid: true, // do not remporarily add invalid tags
-                dropdown: {
-                    closeOnSelect: false,
-                    enabled: 0,
-                    classname: "users-list",
-                    searchKeys: ["name", "email"], // very important to set by which keys to search for suggesttions when typing
-                },
-                templates: {
-                    tag: tagTemplate,
-                    dropdownItem: suggestionItemTemplate,
-                    dropdownHeader: dropdownHeaderTemplate,
-                },
-                //show data from membersList but exclude role of PROJECT_MANAGER
-                whitelist: membersList.filter((member) => member.role !== "PROJECT_MANAGER"),
-                transformTag: (tagData, originalData) => {
-                    //show name and role in tag
-                    tagData.value = tagData.name + " <" + tagData.email + ">";
-                    return tagData;
-                },
-                validate({name, email}) {
-                    // when editing a tag, there will only be the "name" property which contains name + email (see 'transformTag' above)
-                    if (!email && name) {
-                        var parsed = parseFullValue(name);
-                        name = parsed.name;
-                        email = parsed.email;
-                    }
+        // tagify.settings.templates =
 
-                    if (!name) return "Missing name";
-                    if (!validateEmail(email)) return "Invalid email";
+        // bind events
+        tagify.on('add', onAddTag)
+        tagify.DOM.input.addEventListener('focus', onSelectFocus)
 
-                    return true;
-                },
-            });
+        function onAddTag(e){
+
+            console.log(e.detail);
+
         }
 
-        // attach events listeners
-        tagify
-            .on("dropdown:select", onSelectSuggestion) // allows selecting all the suggested (whitelist) items
-            .on("edit:start", onEditStart); // show custom text in the tag while in edit-mode
-
-        function onSelectSuggestion(e) {
-            // custom class from "dropdownHeaderTemplate"
-            if (
-                e.detail.elm.classList.contains(
-                    `${tagify.settings.classNames.dropdownItem}__addAll`
-                )
-            )
-                tagify.dropdown.selectAll();
+        function onSelectFocus(e){
+            console.log(e)
         }
-
-        function onEditStart({detail: {tag, data}}) {
-            tagify.setTagTextNode(tag, `${data.name} <${data.email}>`);
-        }
-
-        // https://stackoverflow.com/a/9204568/104380
-        function validateEmail(email) {
-            return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
-        }
-
-        function parseFullValue(value) {
-            // https://stackoverflow.com/a/11592042/104380
-            var parts = value.split(/<(.*?)>/g),
-                name = parts[0].trim(),
-                email = parts[1]?.replace(/<(.*?)>/g, "").trim();
-
-            return {name, email};
-        }
-    </script>
-
-    <script type="module">
-        import {getData, sendData} from "/js/api-function.js";
-        import {getTaskList} from '/js/callDataForTask.js';
 
         // Get all elements with the common class name
         const editableLabels =
@@ -790,7 +679,6 @@
                 "border-2",
                 "border"
             );
-            console.log(task.status);
             switch (task.status) {
                 case "TODO":
                     taskDiv.classList.add("border-primary");
@@ -844,7 +732,6 @@
 
         let taskList = await getTaskList()
 
-        console.log(taskList[0]);
         for (let i = 0; i < taskList.length; i++) {
             const task = taskList[i];
 
@@ -863,14 +750,19 @@
             taskDiv.addEventListener("dragstart", (e) => {
                 taskDiv.classList.add("is-dragging");
                 currentZone = taskDiv.parentElement;
-                console.log("deagging");
+                console.log("dragging");
                 currentTask = taskDiv;
                 console.log("CURRENT TASK ", currentTask)
             });
 
             taskDiv.addEventListener("click", (e) => {
-                currentTaskData = taskList[parseInt(taskDiv.getAttribute('index'))]
                 console.log('click task so should change the current task data', currentTaskData)
+                currentTaskData = taskList[parseInt(taskDiv.getAttribute('index'))]
+                modal.querySelector(".modal-title").innerText = currentTaskData.title;
+                modal.querySelector("#task").innerText = currentTaskData.title;
+                modal.querySelector("#description-label").innerText = currentTaskData.description;
+                modal.querySelector("#description-editor").innerText = currentTaskData.description;
+
             });
 
             taskDiv.addEventListener("dragend", () => {
@@ -954,7 +846,7 @@
             newTask.addEventListener("dragstart", (e) => {
                 newTask.classList.add("is-dragging");
                 currentTask = newTask;
-                console.log("deagging");
+                console.log("dragging");
             });
 
             newTask.addEventListener("click", (e) => {
@@ -1143,7 +1035,7 @@
             week: {
                 daynames: ["Mon", "Tue", "Wed", "Thu", "Fri"],
                 startDayOfWeek: 0,
-                workweek:true,
+                workweek: true,
                 //set 12 hour format
                 hourStart: 7,
                 hourEnd: 19,
@@ -1179,18 +1071,26 @@
         //call api/tasks/save when click add button and send data as JSON.stringify to api
         //use jquery ajax
         $("#task-add-btn").on("click", function () {
+            // Get the member id for the added tag , don't return array , only id please
+            const tagData = tagify.value.map((tag) => {
+                const member = membersList.find((member) => {
+                    return member.name + " | " + member.role === tag.value;
+                });
+                return member.id;
+            });
             const data = {
                 title: $("#title").val(),
                 description: $("#description").val(),
                 // Convert to Unix timestamp
                 plan_start_time: new Date($("#start_time").val()).getTime(),
                 plan_end_time: new Date($("#end_time").val()).getTime(),
-                status: "TODO",
-                group: $("#group").val(),
-                projectId: projectId,
-                members: tagify.value.map((member) => {
-                    return member.id;
-                }),
+                tasksGroup: $("#group").val(),
+                projectDto: {
+                    id: parseInt(projectId)
+                },
+                userDto: {
+                    id: tagData[0]
+                }
             };
             console.log(data);
             $.ajax({
@@ -1207,10 +1107,6 @@
                 },
             });
         });
-
-
-
-
 
 
     </script>
