--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -1310,7 +1310,7 @@
                                         class="card-body profile-card pt-4 d-flex flex-column align-items-center"
                                     >
                                         <img
-                                            th:src="${images/avatars/pm_avatar.png}"
+                                            src="images/avatars/pm_avatar.png"
                                             alt="Profile"
                                             class="rounded-circle"
                                         />
